# Implementation-of-a-Time-Series-Data-Construction-and-Analysis-System-Based-on-Large-Language-Models

./: .gitattributes  .gitignore  README.md  UPLOAD_LIMITATIONS.md
ts-caption-eval/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ts-caption-eval/configs/: smoke.yaml  smoke_full.yaml  thesis.yaml  thesis_qa.yaml
ts-caption-eval/data/captions/: ett.jsonl  fred.jsonl  nab.jsonl  ucr.jsonl
ts-caption-eval/data/qa/: tsshapeqa_400.jsonl
ts-caption-eval/docs/: DESIGN.md
ts-caption-eval/predictions/: cnn_predictions.jsonl  cnn_qa_predictions.jsonl  mlp_predictions.jsonl  mlp_qa_predictions.jsonl  patchtst_predictions.jsonl  patchtst_qa_predictions.jsonl
ts-caption-eval/references/: gt_captions.jsonl
ts-caption-eval/results/thesis_caption_eval_downstream_qa_20260427/: main_table.csv  main_table.json  main_table.md
ts-caption-eval/results/thesis_caption_eval_llm_judge_full_20260426/: main_table.csv  main_table.json  main_table.md
ts-caption-eval/results/thesis_caption_eval_reference_based_20260426/: main_table.csv  main_table.json  main_table.md
ts-caption-eval/scripts/: build_references.py  make_dummy_predictions.py  sample_source_data.py
ts-caption-eval/tests/: test_smoke.py
ts-caption-eval/tscapeval/: __init__.py  evaluator_base.py  io.py  llm.py  reference_builder.py  runner.py  stats.py  types.py
ts-caption-eval/tscapeval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ts-caption-eval/tscapeval/metrics/: __init__.py  llm_judge.py  qa_downstream.py  reference_based.py
(+1447 files in other folders)
