[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tscapeval"
version = "0.1.0"
description = "A simple evaluation framework for time series captioning models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ts-caption-eval contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "openai>=1.30",
    "sacrebleu>=2.4",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.3"]

[project.scripts]
tscapeval = "tscapeval.runner:main"

[tool.setuptools.packages.find]
include = ["tscapeval*"]
